// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotAuthorized component should apply custom styles 1`] = `
<EmptyState
  className="ins-c-not-authorized something"
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    You do not have access to Foo
  </Title>
  <EmptyStateBody>
    <ContactBody />
  </EmptyStateBody>
  <Button
    component="a"
    href="."
    variant="primary"
  >
    Go to landing page
  </Button>
</EmptyState>
`;

exports[`NotAuthorized component should not show buttons 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    You do not have access to Foo
  </Title>
  <EmptyStateBody>
    <ContactBody />
  </EmptyStateBody>
</EmptyState>
`;

exports[`NotAuthorized component should render 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    You do not have access to Foo
  </Title>
  <EmptyStateBody>
    <ContactBody />
  </EmptyStateBody>
  <Button
    component="a"
    href="."
    variant="primary"
  >
    Go to landing page
  </Button>
</EmptyState>
`;

exports[`NotAuthorized component should show custom actions 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    You do not have access to Foo
  </Title>
  <EmptyStateBody>
    <ContactBody />
  </EmptyStateBody>
  <button
    id="action-one"
    key="1"
  >
    1
  </button>
  <button
    id="action-one"
    key="2"
  >
    2
  </button>
  <Button
    component="a"
    href="."
    variant="primary"
  >
    Go to landing page
  </Button>
</EmptyState>
`;

exports[`NotAuthorized component should show custom description 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    You do not have access to Foo
  </Title>
  <EmptyStateBody>
    Some text
  </EmptyStateBody>
  <Button
    component="a"
    href="."
    variant="primary"
  >
    Go to landing page
  </Button>
</EmptyState>
`;

exports[`NotAuthorized component should show custom title 1`] = `
<EmptyState
  className="ins-c-not-authorized "
  variant="full"
>
  <EmptyStateIcon
    icon={[Function]}
  />
  <Title
    headingLevel="h5"
    size="lg"
  >
    Custom title
  </Title>
  <EmptyStateBody>
    <ContactBody />
  </EmptyStateBody>
  <Button
    component="a"
    href="."
    variant="primary"
  >
    Go to landing page
  </Button>
</EmptyState>
`;

exports[`NotAuthorized component should use custom icon 1`] = `
<div
  className="pf-c-empty-state ins-c-not-authorized "
>
  <div
    className="pf-c-empty-state__content"
  >
    some Icon!
    <h5
      className="pf-c-title pf-m-lg"
      data-ouia-component-id="OUIA-Generated-Title-1"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe={true}
    >
      You do not have access to Foo
    </h5>
    <div
      className="pf-c-empty-state__body"
    >
      Array [
        "Contact your organization administrator(s) for more information or visit ",
        <a
          href="./settings/my-user-access"
        >
          My User Access
        </a>,
        "  to learn more about your permissions.",
      ]
    </div>
    <a
      aria-disabled={false}
      aria-label={null}
      className="pf-c-button pf-m-primary"
      data-ouia-component-id="OUIA-Generated-Button-primary-1"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe={true}
      disabled={null}
      href="."
      role={null}
      type={null}
    >
      Go to landing page
    </a>
  </div>
</div>
`;
